--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ django-annoying==0.7.6
 django-debug-toolbar==1.0.1
 validate-email==1.1
 django-compressor==1.2
+django-storages==1.1.6
+boto==2.8.0
